Support theme-specific bundles + refactor bundle processing.

--- a/engineer/templates/core/_base.html
+++ b/engineer/templates/core/_base.html
@@ -28,7 +28,7 @@
 
     {% block normalizecss %}
         {% if theme.bundles.normalize %}
-            {% assets %}
+            {% assets "normalize" %}
                 <link rel="stylesheet" href="{{ ASSET_URL }}">
             {% endassets %}
         {% endif %}
