--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -1,8 +1,8 @@
-@import "./shared/baseline.less";
+@import "../../../_shared/less/baseline.less";
 @import "_mixins.less";
 @import "_colors.less";
 @import "_typography.less";
-@import "./shared/_solarized.less";
+@import "../../../_shared/code_styles/_solarized.less";
 
 .replace_me {
     background-color: yellow;
