--- a/engineer/themes/oleb/static/stylesheets/_element_styles.less
+++ b/engineer/themes/oleb/static/stylesheets/_element_styles.less
@@ -1,6 +1,6 @@
-@import "./shared/baseline.less";
-@import "_colors.less";
-@import "_typography.less";
+@import "../../../_shared/less/baseline.less";
+@import (reference) "_colors.less";
+@import (reference) "_typography.less";
 
 ////////////////////
 // ELEMENT STYLES //
