--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -1,7 +1,8 @@
-@import "./shared/_base_mixins.less";
-@import "_colors.less";
-@import "_typography.less";
+@import "../../../_shared/less/_base_mixins.less";
+@import (reference) "_colors.less";
+@import (reference) "_typography.less";
 @import "_element_styles.less";
+@import (inline) "../../../_shared/code_styles/github.css";
 
 ///////////////////
 // HEADER STYLES //
