--- a/engineer/themes/oleb/templates/theme/base.html
+++ b/engineer/themes/oleb/templates/theme/base.html
@@ -1,20 +1,14 @@
 {% extends 'core/_base.html' %}
 
-{%- from 'core/_macros.html' import render_less_link -%}
-
 {% block site_title %}
     {% block page_title %}{% endblock %}
     {% if self.page_title() %}: {% endif %}{{ super() }}
 {% endblock %}
 
 {%- block stylesheets %}
-    {{ render_less_link('theme/stylesheets/oleb.less') }}
-    {%- block additional_stylesheets %}
-        {% filter compress %}
-            <link rel="stylesheet"
-                  href="{{ settings.STATIC_URL }}/theme/stylesheets/github.css"/>
-        {% endfilter %}
-    {% endblock -%}
+    {% assets "oleb" %}
+        <link rel="stylesheet" href="{{ ASSET_URL }}" type="text/css"/>
+    {% endassets %}
 {% endblock -%}
 
 {%- block scripts_top %}
@@ -23,8 +17,10 @@
             src="http://use.typekit.net/{{ theme.typekit_id }}.js"></script>
     <script type="text/javascript">
         try {
+            // noinspection JSUnresolvedVariable
             Typekit.load();
-        } catch (e) {
+        }
+        catch (e) {
         }
     </script>
     {%- block additional_scripts_top %}{% endblock -%}
