--- a/engineer/themes/dark_rainbow/static/stylesheets/_mixins.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/_mixins.less
@@ -1,4 +1,4 @@
-@import "./shared/_base_mixins.less";
+@import "../../../_shared/less/_base_mixins.less";
 
 .bulleted-list(@bullet: "»") {
     > ul li:before {
