--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -2,7 +2,7 @@
 @import (reference) "_colors.less";
 @import (reference) "_typography.less";
 @import "_element_styles.less";
-@import (inline) "../../../_shared/code_styles/github.css";
+@import (less) "../../../_shared/code_styles/github.css";
 
 ///////////////////
 // HEADER STYLES //
