--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -1,7 +1,7 @@
 @import "../../../_shared/less/baseline.less";
 @import "_mixins.less";
-@import "_colors.less";
-@import "_typography.less";
+@import (reference) "_colors.less";
+@import (reference) "_typography.less";
 @import "../../../_shared/code_styles/_solarized.less";
 
 .replace_me {
