Add missing Foundation js.

--- a/engineer/themes/dark_rainbow/templates/theme/base.html
+++ b/engineer/themes/dark_rainbow/templates/theme/base.html
@@ -124,5 +124,7 @@
 {% endblock body %}
 
 {%- block scripts_bottom %}
-    {{ super() }}
+    {% assets "foundation_js" %}
+        <script src="{{ ASSET_URL }}"></script>
+    {% endassets %}
 {% endblock -%}
