--- a/engineer/themes/oleb/templates/theme/base.html
+++ b/engineer/themes/oleb/templates/theme/base.html
@@ -97,4 +97,8 @@
     </div>
 {% endblock body %}
 
-{%- block scripts_bottom %}{% endblock -%}
+{%- block scripts_bottom %}
+    {% assets "foundation_js" %}
+        <script src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+{% endblock -%}
