--- a/engineer/_themes/dark_rainbow/templates/theme/post_list.html
+++ b/engineer/_themes/dark_rainbow/templates/theme/post_list.html
@@ -13,8 +13,8 @@
         {% endfor %}
     </div>
     <div class="row archives">
-        <div class="twelve columns post-links">
-            <ul class="block-grid three-up">
+        <div class="small-12 columns post-links">
+            <ul class="small-block-grid-3">
                 <li>
                     {% if has_next %}
                         <a href="{{ urlname('listpage', (slice_num + 1)) }}">← older posts</a>
