--- a/engineer/_themes/dark_rainbow/templates/theme/template_page_simple.html
+++ b/engineer/_themes/dark_rainbow/templates/theme/template_page_simple.html
@@ -2,6 +2,9 @@
 
 {# A simple template page layout that includes the default site sidebar. #}
 
+{% block header_secondary_h1_class %}small-12 columns{% endblock %}
+{% block nav_secondary %}{# Empty secondary nav #}{% endblock %}
+
 {% block page_title %}Simple Template Page{% endblock %}
 
 {% block section_main_content %}
