--- a/engineer/_themes/dark_rainbow/templates/theme/_single_post.html
+++ b/engineer/_themes/dark_rainbow/templates/theme/_single_post.html
@@ -1,39 +1,41 @@
 <div class="row">
-    {% block post_info %}
-        <div class="post-info two columns">
-            <div class="post-date">
-                {% with timestamp=post.timestamp_local %}
-                    <div class="month">{{ timestamp|date("%b")|upper }}</div>
-                    <div class="day">{{ timestamp|date("%d") }}</div>
-                    <div class="year">{{ timestamp|date("%Y") }}</div>
-                    <div class="permalink">
-                        <a href="{{ post.url }}"
-                           title="Permanent link to '{{ post.title }}'">∞</a>
-                    </div>
-                {% endwith %}
-            </div>
-            {% if post.via %}
-                <div class="attribution">
-                    {% if post.via_link %}
-                        via <a href="{{ post.via_link }}">{{ post.via }}</a>
-                    {% else %}
-                        via {{ post.via }}
-                    {% endif %}
+{#    <div class="show-for-medium-up">#}
+        {% block post_info %}
+            <div class="post-info medium-3 large-2 columns">
+                <div class="post-date">
+                    {% with timestamp=post.timestamp_local %}
+                        <div class="month">{{ timestamp|date("%b")|upper }}</div>
+                        <div class="day">{{ timestamp|date("%d") }}</div>
+                        <div class="year">{{ timestamp|date("%Y") }}</div>
+                        <div class="permalink">
+                            <a href="{{ post.url }}"
+                               title="Permanent link to '{{ post.title }}'">∞</a>
+                        </div>
+                    {% endwith %}
                 </div>
-            {% endif %}
-            {% if post.tags|count > 0 %}
-                <ul class="tags">
-                    {% for tag in post.tags %}
-                        <li><a href="{{ urlname('tag', tag) }}">{{ tag }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        </div>
-    {% endblock post_info %}
+                {% if post.via %}
+                    <div class="attribution">
+                        {% if post.via_link %}
+                            via <a href="{{ post.via_link }}">{{ post.via }}</a>
+                        {% else %}
+                            via {{ post.via }}
+                        {% endif %}
+                    </div>
+                {% endif %}
+                {% if post.tags|count > 0 %}
+                    <ul class="tags">
+                        {% for tag in post.tags %}
+                            <li><a href="{{ urlname('tag', tag) }}">{{ tag }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
+        {% endblock post_info %}
+{#    </div>#}
     {% block post_content %}
         {% with link=post.is_external_link %}
-            <article class="post-content ten columns">
+            <article class="post-content medium-9 large-10 columns">
                 <time datetime="{{ post.timestamp|localtime|date("%Y-%m-%d %Z") }}"
                       pubdate=""></time>
                 <header>
@@ -42,6 +44,10 @@
         {{ post.url }}{% endif %}">{{ post.title|typogrify_no_widont }}</a>
                         {% if link %}<span class="arrow">→</span>{% endif %}
                     </h1>
+{##}
+{#                    <div class="show-for-small-only">#}
+{#                        {{ self.post_info() }}#}
+{#                    </div>#}
                 </header>
                 {% if listpage and post.content_teaser %}
                     {{ post.content_teaser|safe }}
@@ -53,13 +59,13 @@
                 {% endif %}
                 {% if nav_context in ('post',) %}
                     {# remember that all_posts is sorted such that newer posts have lower indexes #}
-                    {% set current_index = all_posts.index(post) %}
-                    {% set has_older = (current_index < all_posts|count - 1) %}
-                    {% set has_newer = (current_index > 0) %}
+                    {#                    {% set current_index = all_posts.index(post) %}#}
+                    {#                    {% set has_older = (current_index < all_posts|count - 1) %}#}
+                    {#                    {% set has_newer = (current_index > 0) %}#}
 
                     <div class="row">
-                        <div class="twelve columns post-links">
-                            <ul class="block-grid two-up">
+                        <div class="small-12 columns post-links">
+                            <ul class="small-block-grid-2">
                                 <li>
                                     {% if older_post %}
                                         <a href="{{ older_post.url }}">← {{ older_post.title }}</a>
