--- a/engineer/_themes/dark_rainbow/templates/theme/post_archives.html
+++ b/engineer/_themes/dark_rainbow/templates/theme/post_archives.html
@@ -10,7 +10,7 @@
     {{ super() }} archives
 {% endblock %}
 
-{% block header_secondary_h1_class %}twelve columns{% endblock %}
+{% block header_secondary_h1_class %}small-12 columns{% endblock %}
 
 {% block header_secondary_title %}
     {{ self.page_title() }}
@@ -19,14 +19,14 @@
 {% block section_main_content %}
     {% for year, posts in post_list|groupby('timestamp.year')|sort(reverse=True, attribute='grouper') %}
         <div class="row">
-            <div class="two columns"><h2><a name="{{ year }}"></a>{{ year }}</h2></div>
-            <div class="ten columns">
+            <div class="small-12 medium-2 columns"><h2><a name="{{ year }}"></a>{{ year }}</h2></div>
+            <div class="small-12 medium-10 columns">
                 {% for post in posts %}
                     <article class="row">
-                        <div class="two phone-one columns post-date">
+                        <div class="medium-2 small-3 columns post-date">
                             {{ post.timestamp_local|date('%d %b') }}
                         </div>
-                        <div class="ten phone-three columns">
+                        <div class="medium-10 small-9 columns">
                             <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
                         </div>
                     </article>
