Initial support for Facebook sharing meta tags.

--- a/engineer/_themes/dark_rainbow/templates/theme/base.html
+++ b/engineer/_themes/dark_rainbow/templates/theme/base.html
@@ -20,6 +20,7 @@
 {%- block scripts_top %}
     {# JQUERY #}
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+    <!--suppress JSUnresolvedLibraryURL -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>
         if (window.jQuery == undefined) {
@@ -30,8 +31,9 @@
     </script>
 
     {# TYPEKIT #}
+    <!--suppress JSUnresolvedLibraryURL -->
     <script type="text/javascript"
-            src="http://use.typekit.net/{{ theme.typekit_id }}.js"></script>
+            src="//use.typekit.net/{{ theme.typekit_id }}.js"></script>
     <script type="text/javascript">
         try {
             // noinspection JSUnresolvedVariable
