--- a/engineer/_themes/_shared/templates/_comments.html
+++ b/engineer/_themes/_shared/templates/_comments.html
@@ -7,7 +7,7 @@
         var disqus_url = '{{ post.absolute_url }}';
         {% if DEBUG -%}
             var disqus_developer = 1;
-        {%- endif -%}
+        {%- endif %}
 
         (function () {
             var dsq = document.createElement('script');
