--- a/engineer/_themes/dark_rainbow/templates/theme/_single_post.html
+++ b/engineer/_themes/dark_rainbow/templates/theme/_single_post.html
@@ -1,38 +1,48 @@
 <div class="row">
-{#    <div class="show-for-medium-up">#}
-        {% block post_info %}
-            <div class="post-info medium-3 large-2 columns">
-                <div class="post-date">
-                    {% with timestamp=post.timestamp_local %}
-                        <div class="month">{{ timestamp|date("%b")|upper }}</div>
-                        <div class="day">{{ timestamp|date("%d") }}</div>
-                        <div class="year">{{ timestamp|date("%Y") }}</div>
-                        <div class="permalink">
-                            <a href="{{ post.url }}"
-                               title="Permanent link to '{{ post.title }}'">∞</a>
-                        </div>
-                    {% endwith %}
-                </div>
-                {% if post.via %}
-                    <div class="attribution">
-                        {% if post.via_link %}
-                            via <a href="{{ post.via_link }}">{{ post.via }}</a>
-                        {% else %}
-                            via {{ post.via }}
-                        {% endif %}
+    {% block post_info %}
+        <div class="post-info medium-3 large-2 columns">
+            <div class="post-date">
+                {% with timestamp=post.timestamp_local %}
+                    <div class="month">{{ timestamp|date("%b")|upper }}</div>
+                    <div class="day">{{ timestamp|date("%d") }}</div>
+                    <div class="year">{{ timestamp|date("%Y") }}</div>
+                    <div class="permalink">
+                        <a href="{{ post.url }}"
+                           title="Permanent link to '{{ post.title }}'">∞</a>
                     </div>
-                {% endif %}
-                {% if post.tags|count > 0 %}
-                    <ul class="tags">
-                        {% for tag in post.tags %}
-                            <li><a href="{{ urlname('tag', tag) }}">{{ tag }}</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                {% endwith %}
             </div>
-        {% endblock post_info %}
-{#    </div>#}
+            {% if post.via %}
+                <div class="attribution">
+                    {% if post.via_link %}
+                        via <a href="{{ post.via_link }}">{{ post.via }}</a>
+                    {% else %}
+                        via {{ post.via }}
+                    {% endif %}
+                </div>
+            {% endif %}
+            {% if post.tags|count > 0 %}
+                <ul class="tags">
+                    {% for tag in post.tags %}
+                        <li><a href="{{ urlname('tag', tag) }}">{{ tag }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% if not listpage %}
+                <div class="sharing">
+                    {% if theme.sharing.twitter_enabled %}
+                        {% include ['_twitter_share.html', 'theme/_twitter_share.html'] ignore missing with context %}
+                    {% endif %}
+
+                    {% if theme.sharing.facebook_enabled and theme.sharing.facebook_app_id %}
+                        {% include ['_facebook_share.html', 'theme/_facebook_share.html'] ignore missing with context %}
+                    {% endif %}
+                </div>
+            {% endif %}
+        </div>
+    {% endblock post_info %}
+
     {% block post_content %}
         {% with link=post.is_external_link %}
             <article class="post-content medium-9 large-10 columns">
@@ -44,10 +54,6 @@
         {{ post.url }}{% endif %}">{{ post.title|typogrify_no_widont }}</a>
                         {% if link %}<span class="arrow">→</span>{% endif %}
                     </h1>
-{##}
-{#                    <div class="show-for-small-only">#}
-{#                        {{ self.post_info() }}#}
-{#                    </div>#}
                 </header>
                 {% if listpage and post.content_teaser %}
                     {{ post.content_teaser|safe }}
