--- a/engineer/_themes/dark_rainbow/templates/theme/base.html
+++ b/engineer/_themes/dark_rainbow/templates/theme/base.html
@@ -78,6 +78,19 @@
 {% endblock -%}
 
 {%- block body %}
+    {% if theme.sharing.facebook_enabled and theme.sharing.facebook_app_id %}
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId={{ theme.sharing.facebook_app_id }}&version=v2.0";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+    {% endif %}
     <div class="container">
         {%- block header_primary %}
             <header id="primary" class="row">
@@ -107,7 +120,7 @@
                 {%- block header_secondary_content %}
                     <h1 class="
                         {%- block header_secondary_h1_class %}small-12 medium-6 columns{% endblock -%}">
-                    {%- block header_secondary_title %}<span class="replace_me">
+                        {%- block header_secondary_title %}<span class="replace_me">
                         section header</span>{% endblock -%}
                     </h1>
                     {%- block nav_secondary %}
